# C_log

./: .gitignore  LICENSE  Makefile.am  README  README.md  autoclean.sh  autogen.sh  configure.ac
example/: Makefile.am  log.conf  main.c
shared/: Makefile.am
src/: Makefile.am  example.c  example_log.conf  liblog.c  liblog.conf.sample  liblog.h  log.c  log.conf  log.conf.sample  log.h  main.c
